Closed
Bug 942248
Opened 12 years ago
Closed 12 years ago
Build bustage in nsNumberControlFrame.cpp in non-unified mode (‘nsIDOMMutationEvent’ has not been declared)
Categories
(Core :: Layout: Form Controls, defect)
Tracking
()
RESOLVED
FIXED
mozilla28
People
(Reporter: ehsan.akhgari, Assigned: ehsan.akhgari)
References
Details
(Whiteboard: [qa-])
Attachments
(1 file)
412 bytes,
patch
|
jwatt
:
review+
|
Details | Diff | Splinter Review |
1:27.56 /media/storage/moz/src/layout/forms/nsNumberControlFrame.cpp: In member function ‘virtual nsresult nsNumberControlFrame::AttributeChanged(int32_t, nsIAtom*, int32_t)’:
1:27.57 /media/storage/moz/src/layout/forms/nsNumberControlFrame.cpp:158:23: error: ‘nsIDOMMutationEvent’ has not been declared
1:27.59 /media/storage/moz/src/layout/forms/nsNumberControlFrame.cpp:161:9: error: ‘nsIDOMMutationEvent’ has not been declared
1:27.59 /media/storage/moz/src/layout/forms/nsNumberControlFrame.cpp:161:9: error: ‘nsIDOMMutationEvent’ has not been declared
Assignee | ||
Comment 1•12 years ago
|
||
Attachment #8336935 -
Flags: review?(jwatt)
![]() |
||
Updated•12 years ago
|
Attachment #8336935 -
Flags: review?(jwatt) → review+
Assignee | ||
Comment 2•12 years ago
|
||
Comment 3•12 years ago
|
||
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla28
Updated•12 years ago
|
Whiteboard: [qa-]
You need to log in
before you can comment on or make changes to this bug.
Description
•