Bug 942248 - Fix a non-unified build bustage in nsNumberControlFrame.cpp; r=jwatt